--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
 				<div class="contact">
 					<form action="action_page.php">Name:<br>
   						<input type="text" name="firstname" value="John Smith">
-  							<br>
+  							<br>Email<br>
  						 <input type="text" name="email" value="example@email.com">
- 						 <br>
+ 						 <br>Messege<br>
  						 <textarea name="message" rows="10" cols="30"></textarea>
  						 <br><br>
   						 <input type="submit" value="Submit">
