--- a/portfolio.html
+++ b/portfolio.html
@@ -26,23 +26,26 @@
 					<h2>Portfolio</h2>
 				</div>
 				<div class="portfolio">
-
-				<div class="item">
-				<h3>Rock Paper sissors</h3>
-				</div>
-				<div class="item">
-				<h3>Rock Paper sissors</h3>
-				</div>
-				<div class="item">
-				<h3>Rock Paper sissors</h3>
-				</div>
-				<div class="item">
-				<h3>Rock Paper sissors</h3>
-				</div>
-				<div class="item">
-				<h3>Rock Paper sissors</h3>
-				</div>
-				
+					<div class="item">
+						<img src="http://lorempixel.com/300/200">
+						<h3>HangMan</h3>
+					</div>
+					<div class="item">
+						<img src="http://lorempixel.com/300/200">
+						<h3>RPG</h3>
+					</div>
+					<div class="item">
+						<img src="http://lorempixel.com/300/200">
+						<h3>Trivia Game</h3>
+					</div>
+					<div class="item">
+						<img src="http://lorempixel.com/300/200">
+						<h3>Rutgers Info Widget</h3>
+					</div>
+					<div class="item">
+						<img src="http://lorempixel.com/300/200">
+						<h3>Rock Paper sissors</h3>
+					</div>
 				</div>
 			</section>
 			<aside>
